--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@repo/theme": "*",
+    "@repo/utils": "*",
     "@repo/ui": "*",
     "next": "16.0.10",
     "react": "^19.2.0",
