--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "exports": {
-    "./*": "./src/*.tsx"
+    "./*": "./src/*/*.tsx"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
@@ -20,6 +20,7 @@
     "typescript": "5.9.2"
   },
   "dependencies": {
+    "@repo/utils": "*",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   }
