--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -20,8 +20,10 @@
     "typescript": "5.9.2"
   },
   "dependencies": {
+    "@repo/hooks": "^0.0.0",
     "@repo/utils": "*",
     "react": "^19.2.0",
+    "react-aria-components": "^1.13.0",
     "react-dom": "^19.2.0"
   }
 }
