--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,7 @@
     "check-types": "next typegen && tsc --noEmit"
   },
   "dependencies": {
+    "@repo/api": "*",
     "@repo/i18n": "*",
     "@repo/theme": "*",
     "@repo/utils": "*",
