--- a/apps/panel/package.json
+++ b/apps/panel/package.json
@@ -1,17 +1,22 @@
 {
-  "name": "docs",
+  "name": "panel",
   "version": "0.1.0",
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 3001",
-    "build": "next build",
-    "start": "next start",
+    "dev": "next dev --port 3002",
+    "build": "next build --webpack",
+    "start": "next start --port 3002",
     "lint": "eslint --max-warnings 0",
     "check-types": "next typegen && tsc --noEmit"
   },
   "dependencies": {
+    "@repo/api": "*",
+    "@repo/i18n": "*",
+    "@repo/theme": "*",
     "@repo/ui": "*",
+    "@repo/utils": "*",
+    "framer-motion": "^12.23.26",
     "next": "16.0.10",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
@@ -19,10 +24,12 @@
   "devDependencies": {
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^22.15.3",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
     "eslint": "^9.39.1",
+    "tailwindcss": "^4.1.18",
     "typescript": "5.9.2"
   }
 }
