--- a/apps/service/tsconfig.build.json
+++ b/apps/service/tsconfig.build.json
@@ -1,12 +1,4 @@
 {
   "extends": "./tsconfig.json",
-  "compilerOptions": {
-    "outDir": "./dist",
-    "declaration": false,
-    "declarationMap": false,
-    "sourceMap": true,
-    "removeComments": true
-  },
-  "exclude": ["node_modules", "dist", "test", "**/*.spec.ts"]
+  "exclude": ["node_modules", "test", "dist", "**/*spec.ts"]
 }
-
