--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,6 +6,7 @@
     ".": "./src/index.ts",
     "./Button": "./src/Button/index.ts",
     "./Checkbox": "./src/Checkbox/index.ts",
+    "./Input": "./src/Input/index.ts",
     "./Label": "./src/Label/index.ts",
     "./Modal": "./src/Modal/index.ts",
     "./Skeleton": "./src/Skeleton/index.ts",
