--- a/apps/service/package.json
+++ b/apps/service/package.json
@@ -6,7 +6,7 @@
     "dev": "nest start --watch",
     "build": "nest build",
     "start": "node dist/main.js",
-    "lint": "eslint --max-warnings 0",
+    "lint": "eslint --max-warnings 0 --config eslint.config.mjs",
     "check-types": "tsc --noEmit -p tsconfig.build.json"
   },
   "dependencies": {
@@ -14,6 +14,7 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.4.17",
     "@nestjs/jwt": "^11.0.2",
+    "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/mongoose": "^11.0.4",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.4.20",
