--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,7 @@
 {
   "$schema": "https://turborepo.com/schema.json",
   "ui": "tui",
+  "globalEnv": ["NODE_ENV", "APP_NAME", "PORT", "MONGO_URI"],
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
