--- a/apps/service/package.json
+++ b/apps/service/package.json
@@ -36,6 +36,7 @@
     "@repo/typescript-config": "*",
     "@types/express": "^5.0.6",
     "@types/node": "^22.15.3",
+    "@types/passport-jwt": "^4.0.1",
     "eslint": "^9.39.1",
     "typescript": "5.9.2"
   }
