--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,7 @@
     "check-types": "next typegen && tsc --noEmit"
   },
   "dependencies": {
+    "@react-three/fiber": "^9.4.2",
     "@repo/api": "*",
     "@repo/i18n": "*",
     "@repo/theme": "*",
@@ -19,7 +20,8 @@
     "framer-motion": "^12.23.26",
     "next": "16.0.10",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
