--- a/apps/service/package.json
+++ b/apps/service/package.json
@@ -28,7 +28,8 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.2"
+    "rxjs": "^7.8.2",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.14",
