chore(repo): switch to pnpm from npm

--- a/apps/panel/package.json
+++ b/apps/panel/package.json
@@ -4,26 +4,26 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 3002",
+    "dev": "next dev --port 6001",
     "build": "next build --webpack",
     "start": "next start --port 3002",
     "lint": "eslint --max-warnings 0",
     "check-types": "next typegen && tsc --noEmit"
   },
   "dependencies": {
-    "@repo/api": "*",
-    "@repo/i18n": "*",
-    "@repo/theme": "*",
-    "@repo/ui": "*",
-    "@repo/utils": "*",
+    "@repo/api": "workspace:*",
+    "@repo/i18n": "workspace:*",
+    "@repo/theme": "workspace:*",
+    "@repo/ui": "workspace:*",
+    "@repo/utils": "workspace:*",
     "framer-motion": "^12.23.26",
     "next": "16.0.10",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
-    "@repo/eslint-config": "*",
-    "@repo/typescript-config": "*",
+    "@repo/eslint-config": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
     "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^22.15.3",
     "@types/react": "19.2.2",
