--- a/apps/service/package.json
+++ b/apps/service/package.json
@@ -33,8 +33,8 @@
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.14",
-    "@repo/eslint-config": "*",
-    "@repo/typescript-config": "*",
+    "@repo/eslint-config": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
     "@types/express": "^5.0.6",
     "@types/node": "^22.15.3",
     "@types/passport-jwt": "^4.0.1",
