--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 3000",
+    "dev": "next dev --port 6100",
     "build": "next build --webpack",
     "start": "next start",
     "lint": "eslint --max-warnings 0",
@@ -12,11 +12,11 @@
   },
   "dependencies": {
     "@react-three/fiber": "^9.4.2",
-    "@repo/api": "*",
-    "@repo/i18n": "*",
-    "@repo/theme": "*",
-    "@repo/ui": "*",
-    "@repo/utils": "*",
+    "@repo/api": "workspace:*",
+    "@repo/i18n": "workspace:*",
+    "@repo/theme": "workspace:*",
+    "@repo/ui": "workspace:*",
+    "@repo/utils": "workspace:*",
     "framer-motion": "^12.23.26",
     "next": "16.0.10",
     "react": "^19.2.0",
@@ -24,8 +24,8 @@
     "three": "^0.182.0"
   },
   "devDependencies": {
-    "@repo/eslint-config": "*",
-    "@repo/typescript-config": "*",
+    "@repo/eslint-config": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
     "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^22.15.3",
     "@types/react": "19.2.2",
