--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -16,11 +16,10 @@
     "@tanstack/react-query": "^5.87.4"
   },
   "devDependencies": {
-    "@repo/typescript-config": "*",
+    "@repo/typescript-config": "workspace:*",
     "typescript": "5.9.2"
   },
   "peerDependencies": {
     "react": "*"
   }
 }
-
