--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -11,7 +11,7 @@
     "check-types": "tsc --noEmit"
   },
   "devDependencies": {
-    "@repo/typescript-config": "*",
+    "@repo/typescript-config": "workspace:*",
     "typescript": "5.9.2"
   },
   "dependencies": {}
