--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -27,7 +27,7 @@
     "next-themes": "^0.4.6"
   },
   "devDependencies": {
-    "@repo/typescript-config": "*",
+    "@repo/typescript-config": "workspace:*",
     "typescript": "5.9.2"
   },
   "peerDependencies": {
