--- a/apps/panel/package.json
+++ b/apps/panel/package.json
@@ -11,6 +11,7 @@
     "check-types": "next typegen && tsc --noEmit"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.12",
     "@repo/api": "workspace:*",
     "@repo/i18n": "workspace:*",
     "@repo/theme": "workspace:*",
